第二次正式提交

--- a/HosePital/HosePital/Views/Defalut/Exmpress.cshtml
+++ b/HosePital/HosePital/Views/Defalut/Exmpress.cshtml
@@ -91,12 +91,12 @@
 <script src="~/Js/Layui/js/layui/layui.all.js"></script>
 
  <script>
-     layui.use(['element', 'jquery', 'table', 'layer', 'form'], function () {
+     layui.use(['element', 'jquery', 'table', 'layer'], function () {
          var element = layui.element;
          var $ = layui.jquery;
          var table = layui.table;
          var layer = layui.layer;
-         var form = layui.form;
+         
          //员工表格 
        
             
